# trivial_python_project

./: README.md  cookiecutter.json
{{cookiecutter.project_dir}}/: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
{{cookiecutter.project_dir}}/src/{{cookiecutter.project_package}}/: __main__.py  functions.py
{{cookiecutter.project_dir}}/tests/: functions_test.py  main_test.py
