[metadata]
name = {{cookiecutter.project_package}}
version = 0.0.1
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{cookiecutter.base_url}}/{{cookiecutter.project_package}}
project_urls =
    Bug Tracker = {{cookiecutter.base_url}}/{{cookiecutter.project_package}}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typer>=0.4.0


[options.entry_points]
console_scripts:
    {{cookiecutter.project_package.replace("_", "-")}} = {{cookiecutter.project_package}}.__main__:app