[metadata]
name = {{cookiecutter.project_package}}
version = 0.0.1
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{cookiecutter.base_url}}
project_urls =
    Bug Tracker = {{cookiecutter.base_url}}issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
{% if cookiecutter.cli == "click" and cookiecutter.default_dependencies %}
install_requires =
    attrs>=23.1
    cattrs>=23.1
    click>=8.0
    platformdirs>=1.4
{% elif cookiecutter.cli == "click" %}
install_requires =
    click>=8.0
{% elif cookiecutter.default_dependencies %}
install_requires =
    attrs>=23.1
    cattrs>=23.1
    platformdirs>=1.4
{% endif %}

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    {{cookiecutter.executable_name}} = {{cookiecutter.project_package}}.__main__:main